--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
